--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webar-all",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite"
@@ -12,7 +13,8 @@
   "description": "",
   "devDependencies": {
     "typescript": "^5.8.3",
-    "vite": "^6.3.3"
+    "vite": "^6.3.3",
+    "vite-plugin-glsl": "^1.3.1"
   },
   "dependencies": {
     "@types/three": "^0.176.0",
