--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
-    "vite-plugin-glsl": "^1.3.1"
+    "vite-plugin-glsl": "^1.3.1",
+    "vite-plugin-static-copy": "^2.3.1"
   },
   "dependencies": {
     "@types/three": "^0.176.0",
