--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/three": "^0.176.0",
     "@types/webxr": "^0.5.22",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "three-pathfinding": "^1.3.0"
   }
 }
